@@ -1,6 +1,7 @@
 --- CHANGELOG ---
 --- TBD: Unreleased ---
     * Fixed so that .initial is set properly on ScalarVariable2.
+    * Fixed get_variable_nominal when called for valueref of variable.
     
 --- PyFMI-2.8.5 ---
     * Added support for option 'logging' for different ODE solvers.
